# mafia

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  package-lock.json  startBoth.bat  startClient.bat  startServer.bat
client/: .env  (+10 more)
mafia_server/: Cargo.toml
mafia_server/resources/random_names/: extra_names.csv
mafia_server/src/: connection.rs  lib.rs  lobby.rs  main.rs
mafia_server/src/game/: chat.rs  chat_message.rs  game.rs  grave.rs  mod.rs  phase.rs  phase_resetting.rs  player.rs  role.rs  role_list.rs  rolelist.rs  settings.rs  target.rs  visit.rs  vote.rs
mafia_server/src/network/: connection.rs  listener.rs  mod.rs  packet.rs  websocket_listener.rs
server/: .env  Cargo.toml  dockerfile
server/resources/: config.json
server/resources/investigative_results/: default.csv
server/resources/random_names/: default_names.csv  extra_names.csv
server/src/: client_connection.rs  lib.rs  listener.rs  lobbies_listener.rs  lobby.rs  main.rs  packet.rs  vec_map.rs  vec_set.rs  weight_map.rs
server/src/database_resources/: database_queries.rs  mod.rs
server/src/game/: ability_input.rs  attack_power.rs  attack_type.rs  available_buttons.rs  end_game_condition.rs  event.rs  game.rs  game_client.rs  game_conclusion.rs  game_listeners.rs  game_over_state.rs  grave.rs  mod.rs  on_client_message.rs  phase.rs  player_group.rs  recruit.rs  resolution_state.rs  role_list.rs  role_outline_reference.rs  selection_type.rs  settings.rs  tag.rs  team.rs  verdict.rs  victory_group.rs  visit.rs  win_condition.rs
server/src/lobby/: game_client.rs  lobby_client.rs  lobby_state.rs  mod.rs  name_validation.rs  on_client_message.rs  on_lobby_message.rs
server/src/models/: game.rs  mod.rs  player.rs
server/src/network/: connection.rs  listener.rs  packet.rs  websocket_listener.rs
server/src/room/: mod.rs  name_validation.rs  on_client_message.rs
server/src/websocket_connections/: connection.rs  mod.rs  websocket_listener.rs  websocket_listeners.rs  websocket_server.rs
server/src/websocket_listener/: client.rs  event.rs  handle_message.rs  mod.rs
server/tests/: common.rs  medium.rs  mod.rs  role.rs  trans.rs  transporter.rs  transporting.rs
(+855 files in other folders)
