[package]
name = "mafia_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.18.0"
futures-util = "*"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.0"
lazy_static = "1.4.0"
