[package]
name = "mafia_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = ">=0.18.0"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.0"
lazy_static = "1.4.0"
serde_json = "1.0"
serde = {version = "1.0.152",  features = ["derive"]}
rand = "0.9.0"
chrono = { version = "0.4.25", default-features = false, features = ["clock"] }
vec1 = { version = "1.12.1", features = ["serde"] }
enum_delegate = "0.2.0"
supabase_rs = "0.4.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
dotenv = "0.15"
